--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Series</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
   <link rel="stylesheet" type="text/css" media="screen" href="css/layout.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>Ordenando series</h1>
+  <header class="row">
+    <div class="column small-12 text-center">
+      <h1 class="font__ubuntu">Ordenando series</h1>
+    </div>
   </header>
   <main>
-
+    <div class="main__box-image">
+      <img src="assets/img_school.png" alt="Buho">
+    </div>
+    <div class="main__box--text">
+      <p>Hola. Soy Orlando, y te ayudaré a ordenar números.</p>
+      <p>A continuación ingrese la cantidad de números que desea ordenar:</p>
+    </div>
+    <form id="js_main__form">
+      <input type="tel" id="js_main__form--input", value="">
+      <button id="js_main__form--button">Guardar</button>
+    </form>
   </main>
   <script src="js/app.js"></script> 
 </body>
