--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
     <section class="row">
       <div class="column small-12 medium-8">
         <div class="main__box--text font__ubuntu" id="js-first_box">
-          <p>Hola. Soy Orlando, y te ayudaré a ordenar números.</p>
-          <p>A continuación ingrese la cantidad total de números que desea ordenar:</p>
-        </div>
-        <div class="main__box--text text-center font__ubuntu" id="js-second_box" style="display: none;">
-          <p>Ahora ingresa uno a uno la serie de números:</p>
+          <p>Hola. Soy Orli, y te ayudaré a ordenar números.</p>
+          <p>A continuación ingrese uno a uno la serie de números, estos se irán añadiendo y ordenando automáticamente.</p>
         </div>
       </div>
       <div class="column small-12 medium-4 text-center">
@@ -27,14 +24,13 @@
         </div>
       </div>
     </section>
-    <form id="js_main__formOne" class="column text-center">
-      <input type="tel" id="js_main__form--input", value="" class="main__form-input validanumericos">
-      <button id="js_main__form--button" class="main__form-btn">Ok</button>
-    </form>
-    <form id="js_main__formTwo" class="column text-center" style="display: none;">
+    <form id="js_main__formTwo" class="column text-center">
       <input type="tel" id="js_main__form--inputTwo", value="" class="main__form-input validanumericos">
       <button id="js_main__form--buttonTwo" class="main__form-btn">Ok</button>
     </form>
+    <div class="row">
+      <div id="js-resultSort" class="column text-center main__box--result"></div>
+    </div>
   </main>
   <script src="js/app.js"></script> 
 </body>
