--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
 </head>
 <body>
-  <main class="layout">
+  <main class="layout my-2">
     <section class="row">
       <div class="column small-12 medium-8">
         <div class="main__box--text font__ubuntu" id="js-first_box">
