--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
           <p>A continuación ingrese uno a uno la serie de números, estos se irán añadiendo y ordenando automáticamente.</p>
         </div>
       </div>
-      <div class="column small-12 medium-4 text-center">
+      <div class="column small-12 medium-4 text-center mt-2">
         <div class="main__box-image">
           <img src="assets/img_school.png" alt="Buho">
         </div>
       </div>
     </section>
     <form id="js_main__formTwo" class="column text-center">
-      <input type="tel" id="js_main__form--inputTwo", value="" class="main__form-input validanumericos">
+      <input type="tel" id="js_main__form--inputTwo", value="" class="main__form-input validanumericos" required>
       <button id="js_main__form--buttonTwo" class="main__form-btn">Ok</button>
     </form>
     <div class="row">
